bug(feedback1): implement feedback from demo1 - validate user input on server/client - ui/ux improvement on client - image management on server (delete image when not needed) - robust authentication on client side - update readme.md file - refactor backend api endpoint routes - refactor test suites
