# server/docs/swagger.json
@@ -219,7 +219,9 @@
             "description": "Unable to update user details"
           }
         }
-      },
+      }
+    },
+    "/users/profile": {
       "put": {
         "tags": [
           "users"
@@ -271,7 +273,7 @@
         }
       }
     },
-    "/users/{userId}/recipes/{recipeId}": {
+    "/users/recipes/{recipeId}": {
       "post": {
         "tags": [
           "users"
@@ -297,13 +299,6 @@
             "name": "recipeId",
             "in": "path",
             "description": "ID of recipe to be added as favorite",
-            "required": true,
-            "type": "integer"
-          },
-          {
-            "name": "userId",
-            "in": "path",
-            "description": "ID of user adding the recipe as favorite",
             "required": true,
             "type": "integer"
           }
@@ -363,13 +358,6 @@
             "name": "recipeId",
             "in": "path",
             "description": "ID of recipe to be removed from favorite",
-            "required": true,
-            "type": "integer"
-          },
-          {
-            "name": "userId",
-            "in": "path",
-            "description": "ID of user adding the recipe as favorite",
             "required": true,
             "type": "integer"
           }
